--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "test-grammar-back",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node ./api/index.js"
   },
   "author": "",
   "license": "ISC",
